# Zentra

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  zentra_backup_20260310_173558.dump  zentra_backup_20260310_232140.dump  zentra_backup_20260311_171504.dump
audit/: models.py  serializers.py  urls.py  views.py
audit/migrations/: 0001_initial.py  0002_initial.py
core/: exceptions.py  middleware.py  models.py  pagination.py  permissions.py  utils.py  views.py
customers/: models.py  serializers.py  urls.py  views.py
customers/migrations/: 0001_initial.py  0002_initial.py
docker/nginx/: Dockerfile  nginx.prod.conf
docker/pgadmin/: pgpass  servers.json
frontend/: .dockerignore  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
invoices/: apps.py  models.py  pdf.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
items/: models.py  serializers.py  urls.py  views.py
organizations/: models.py  serializers.py  urls.py  views.py
payments/: models.py  serializers.py  services.py  signals.py  urls.py  views.py
quotes/: models.py  pdf.py  serializers.py  urls.py  views.py
reports/: pdf.py  urls.py  views.py
scripts/: seed_data.py
subscriptions/: models.py  serializers.py  tasks.py  urls.py  views.py
tests/: conftest.py  test_core.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
zentra/: asgi.py  celery.py  urls.py  wsgi.py
zentra/settings/: base.py  (+2 more)
(+37 files in other folders)
